--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "gulp-plumber": "^0.6.4",
     "gulp-rename": "^1.2.0",
     "gulp-rimraf": "^0.1.0",
+    "gulp-streamify": "0.0.5",
     "gulp-svgmin": "^0.4.6",
     "gulp-uglify": "^0.3.1",
     "gulp-util": "^3.0.0",
     "lazypipe": "^0.2.2",
     "underscore": "^1.6.0",
+    "vinyl-source-stream": "^0.1.1",
     "when": "^3.4.2"
   }
 }
