--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "browserify": "^5.9.1",
-    "coffeeify": "~0.6.x",
+    "coffeeify": "^0.7.0",
     "gulp": "^3.8.6",
     "gulp-autoprefixer": "0.0.8",
     "gulp-browserify": "^0.5.0",
@@ -22,7 +22,7 @@
     "gulp-compass": "^1.2.0",
     "gulp-jst-concat": "0.0.1",
     "gulp-minify-css": "^0.3.7",
-    "gulp-notify": "^1.4.0",
+    "gulp-notify": "^1.4.1",
     "gulp-plumber": "^0.6.4",
     "gulp-rename": "^1.2.0",
     "gulp-rimraf": "^0.1.0",
