--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "guilty-gulp",
   "description": "Gulp set up for browserify, coffeescript, compass (SCSS), SVG, with separate production and development folders",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "private": true,
   "author": {
     "name": "Patrick Smith",
@@ -12,8 +12,10 @@
     "node": ">= 0.9"
   },
   "devDependencies": {
+    "babelify": "^5.0.3",
     "browserify": "^5.9.1",
     "coffeeify": "^0.7.0",
+    "envify": "^3.2.0",
     "gulp": "^3.8.6",
     "gulp-autoprefixer": "0.0.8",
     "gulp-browserify": "^0.5.0",
